# apisports_football

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.ru.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: python-publish.yml
apisports_football/: __init__.py  apiclient.py  exceptions.py  utils.py  wrapper.py
apisports_football/Endpoints/: __init__.py  coachs.py  countries.py  fixtures.py  injuries.py  leagues.py  odds.py  players.py  predictions.py  sidelined.py  standings.py  teams.py  timezone.py  transfers.py  trophies.py  venues.py
apisports_football/Models/: BaseModel.py  __init__.py
apisports_football/Models/Coachs/: Coachs.py
apisports_football/Models/Countries/: Countries.py
apisports_football/Models/Fixtures/: Events.py  Fixtures.py  Lineups.py  Players.py  Rounds.py  Statistics.py
apisports_football/Models/Injuries/: Injuries.py
apisports_football/Models/Leagues/: Leagues.py  Seasons.py
apisports_football/Models/Odds/: Bookmakers.py  Live.py  LiveBets.py  Mapping.py  Odds.py
apisports_football/Models/Players/: Players.py  Profiles.py  Squads.py  Teams.py
apisports_football/Models/Predictions/: Predictions.py
apisports_football/Models/Sidelined/: Sidelined.py
apisports_football/Models/Standings/: Standings.py
apisports_football/Models/Teams/: Statistics.py  Teams.py
apisports_football/Models/Timezone/: Timezone.py  Timezones.py
apisports_football/Models/Transfers/: Transfers.py
tests/: __init__.py  test_endpoints_mock.py  test_models.py  utils.py
tests/data/api_responses/: coachs.json  (+31 more)
(+2 files in other folders)
